# snakeprune

./: .gitignore  README.md  pyproject.toml
docs/: test-coverage.md
docs/superpowers/plans/: 2026-06-16-snakeprune-mvp.md  2026-06-17-snakeprune-safety.md  2026-06-18-snakeprune-subprocess-extraction.md  2026-06-23-snakeprune-targeting-safety.md
docs/superpowers/specs/: 2026-06-16-snakeprune-design.md  2026-06-17-snakeprune-safety-design.md  2026-06-18-snakeprune-subprocess-extraction-design.md  2026-06-23-snakeprune-targeting-safety-design.md
src/snakeprune/: _extract.py  cli.py  delete.py  patterns.py  walker.py
tests/: conftest.py  test_cli.py  test_delete.py  test_patterns.py  test_walker.py
