[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snakeprune"
version = "0.0.1"
description = "Find orphan files in a Snakemake project's results directory."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Tom Willis" }]
dependencies = [
    "snakemake>=8.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.scripts]
snakeprune = "snakeprune.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/snakeprune"]

[tool.pytest.ini_options]
testpaths = ["tests"]
